# Wx-Elecciones-CPP

./: CMakeLists.txt  Readme.md
Include/Interfaz/: InterfazElecciones.h  PanelCandidato.h  PanelExtension.h  PanelImagen.h  PanelUrna.h
Include/Mundo/: Candidato.h  Urna.h
Source/: WinMain.cpp
Source/Interfaz/: InterfazElecciones.cpp  PanelCandidato.cpp  PanelExtension.cpp  PanelImagen.cpp  PanelUrna.cpp
Source/Mundo/: Candidato.cpp  Urna.cpp
